# papers

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: weekly-update.yml
data/raw/: epmc_2025-01-03_to_2025-01-10.json  epmc_2025-01-06_to_2025-01-13.json  epmc_2025-01-13_to_2025-01-20.json  epmc_2025-01-20_to_2025-01-27.json  epmc_2025-01-27_to_2025-02-03.json  epmc_2025-02-03_to_2025-02-10.json  epmc_2025-02-10_to_2025-02-17.json  epmc_2025-02-17_to_2025-02-24.json  epmc_2025-02-24_to_2025-03-03.json  epmc_2025-03-03_to_2025-03-10.json  epmc_2025-03-10_to_2025-03-17.json  epmc_2025-03-17_to_2025-03-24.json  epmc_2025-03-24_to_2025-03-31.json  epmc_2025-03-31_to_2025-04-07.json  epmc_2025-04-07_to_2025-04-14.json  epmc_2025-04-14_to_2025-04-21.json  epmc_2025-04-21_to_2025-04-28.json  epmc_2025-04-28_to_2025-05-05.json  epmc_2025-05-05_to_2025-05-12.json  epmc_2025-05-12_to_2025-05-19.json  epmc_2025-05-19_to_2025-05-26.json  epmc_2025-05-26_to_2025-06-02.json  epmc_2025-06-09_to_2025-06-16.json  epmc_2025-06-16_to_2025-06-23.json  epmc_2025-06-23_to_2025-06-30.json  epmc_2025-06-30_to_2025-07-07.json  epmc_2025-07-07_to_2025-07-14.json  epmc_2025-07-14_to_2025-07-21.json  epmc_2025-07-21_to_2025-07-28.json  epmc_2025-07-28_to_2025-08-04.json  (+34 more)
docs/: epmc_2025-01-03_to_2025-01-10.html  epmc_2025-01-27_to_2025-02-03.html  epmc_2025-02-10_to_2025-02-17.html  epmc_2025-02-17_to_2025-02-24.html  index.html  script.js
scripts/: fetch_data.py  generate_aggregate_html.py  generate_directory.py  generate_html.py  parse_data.py
(+70 files in other folders)
